internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dims-internal-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.internal-devncde.bitwise-digital.info'
    port:
      name: http
      number: 80
      protocol: HTTP
