vc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarqube-vc
spec:
  hosts:
  - "sonarqube.devncde.bitwise-digital.info"
  gateways:
  - dev-ncde-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9000
        host: sonarqube-sonarqube
